--- a/一个陌生女人的来信.md
+++ b/一个陌生女人的来信.md
@@ -1,8 +1,18 @@
 # 一个陌生女人的来信
 
-独角戏演员：黄湘丽[豆瓣评价](http://read.douban.com/reader/column/4869220/chapter/40493698/) [百度百科](https://baike.baidu.com/item/%E9%BB%84%E6%B9%98%E4%B8%BD/7841622?fr=aladdin)
+独角戏话剧演员：黄湘丽[豆瓣评价](http://read.douban.com/reader/column/4869220/chapter/40493698/) [百度百科](https://baike.baidu.com/item/%E9%BB%84%E6%B9%98%E4%B8%BD/7841622?fr=aladdin)
 
-联想到的关键词：
+关键词：书信 情感 女人 心理
+
+剧情：
+
+一个男子在41岁生日当天收到一封没有署名和地址的信，这封信出自一个临死的女人，讲述了一个刻骨铭心的爱情故事，而这个故事的男主人公也就是收信的男人对此一无所知。故事始自18年前，她初遇男人的刹那，她还是个孩子，而后经历了少女的痴迷、青春的激情，甚而流落风尘，但未曾改变对男人的爱，直至临死前才决定告白——她躺在凄凉的命运的甲板上，雪白的泡沫把她推向了虚无……
+
+评价：
+
+花开花谢
+
+## 联想到的
 
 你好，小姐。
 
@@ -13,3 +23,20 @@
 歌曲欣赏：[云烟成雨](http://url.cn/5ryZetH)
 
 ![黄湘丽宣传图.png](http://img.javalemon.com/20190818156605886272673.png)
+
+## 剧透细节(慎重)：
+
+​    斯蒂芬.茨威格用他最擅长的细腻的心理描写，以书信的形式，第一人称的手法，以内心独白的方式，从一个女性的角度出发，平静地娓娓道来暗涌彭湃的一个女人的爱情故事，即《一个陌生女人的来信》(1922年，以下简称《来信》)。
+    他是作家R，她是平凡为爱苦苦挣扎的执着女子。
+    她13岁的时候第一次见到 他便爱上了他，无法自拔，即使后来搬家后也千方百计回到他所在的城市，寒夜孤立只为了看到他房内的灯；只要他需要，她毫不犹豫前往委身于他，因为怀了他的孩子而欣喜若狂；但是她一直没有告诉他，为了抚养孩子她不惜出卖身体，拒绝任何人的求婚，只为了他随时的召唤和随时能跟他在一起的短暂时光；而他始终没有认出她，甚至还把她当作过街头用来泻欲的妓女，他不记得她。终于她还是失去了她和他的孩子，并因此也丧失了继续活下去的希望和勇气。于是她在临死前写下了这段秘密，寄给他，最终向他揭示了这个爱情。只是当他看到这封信的时候，她已经死去。
+    小说在一种不动声色而又感人至深的氛围内娓娓道来，像是一条寂静的小河在欧洲平原上流淌。一个13岁的冰清玉洁的少女的情怀，以及她写信时内心的如泣如诉、如梦如幻，都在茨威格的笔下款款走向我们的心底。那种有如针孔般细致的笔触和细雨般绵密的内心独白让人有一种恍若隔世的体验。一部好小说的艺术魅力是持久的，在八十多年后的今天，我们仍然能感受到作者的创作时的激情和作品给我们带来的透彻心骨的惊讶和悸动。
+    尼采在《快乐的科学》中说：“爱情这个简单字眼，对男女实际上表示两种不同意思。女人对爱情的理解是非常清楚的：这不仅是奉献，而且是整个身心的奉献，毫无保留地、不顾一切地。她的爱所具有的这种无条件性使爱成为信仰，她唯一拥有的信仰。”女主人公就是这样个把爱情当作生命的唯一信仰的女人。
+   “我希望你想起我来，总是怀着爱情，怀着感激：在这点上，我愿意在你结交的所有的女人当中成为独一无二的一个。”（见《来信》）我认为这句话最能代表她纯粹的爱。一方面：她的爱完全不计付出，甚至今人看来是盲目的，不可思议的。她不管，爱他就是她生活的勇气。“从来没有责骂过我对你的爱情，我始终都爱着你，一直为你所给我的那个时刻而祝福。假如由于那些时刻我还得再进一次地狱，而且事先知道我将受的苦，那么我还愿意再进一次，我亲爱的，愿意再进一次，再进一千次! ”（见《来信》）另一方面：她对作家的爱，是理性的。这种理性源于对他最深沉的爱。主观上她无法不爱他，理性上她决不会以 “爱的付出”当作筹码要求作家的回应。主观愿望和理性都如此强烈，但一直都是理性占上风的。理性胜利，原因除了爱还是爱！她只要他无负担地接受她的爱，用本能的最自然的状态。用行为让自己成为他“结交的所有的女人当中成为独一无二的一个”，即使他完全不知道，只要他“想起我来，总是怀着爱情，怀着感激”。
+    文中女主人公与作家的三次邂逅，是她生命中的最隆重的华彩，其他的时间、空间、人物都可以忽略。13岁时小女孩用清澈的眼睛观望那个健硕的背影；19岁时少女为了他丢掉矜持和羞涩站在他家的路口，等待和他的再次相遇；再见他时已使为人母的少妇，还有和他的儿子，又义无反顾地回到他的身边。尽管每次在一起都很短，她会永远为他保留自由之身，以便随时回到他的身边。她的苦从来不会对他说，她不要他有负担。在他不在的时候，还好有他的儿子在身边，让他感觉早他的存在。儿子是她平日唯一的寄托依靠，是她和他最完整的联系。可是儿子也离她而去，自己也重病缠身，在即要离去是时刻只请求“每逢生日——生日是一个想起自己的日子——都买些玫瑰来供在花瓶里”（以前都是她派人送），写一封长信告诉他，关于她对他最完整最无私的爱情。
+    高尔基曾盛赞《来信》“这是一篇惊人的杰作”。这样的评价一点也不过。不知作者肯定会认为是个女作家写的自传性小说，正是拥有惊人诚挚的笔调，对女人超人的温存，对主体的创造性，只有艺术家才具有的表现力的茨威格才写得出。它的语言完全不同于西方的心理描写的小说，没有冗长拖沓的句子，没有令人眩晕的失常的心理描写，没有外语译后的生涩感，很自然。也很自然地我的喉管随着文字哽咽，心头一直有伤口涂上盐水的隐痛。 —摘自[豆瓣评价](https://book.douban.com/review/1029222/)
+
+
+
+> 《一个陌生女人的来信》话剧
+>
+> 2019.08.17 
