--- a/一个陌生女人的来信.md
+++ b/一个陌生女人的来信.md
@@ -12,6 +12,24 @@
 
 花开花谢
 
+## 关键心理路程
+
+13岁-碰到搬家过来的作家W先生，深爱上了W先生
+
+母亲改嫁-搬家，等候W先生至深夜，为了见最后一面，结果等来了W先生和一个女人
+
+成人-回去找到W先生，委身与他，W先生送了我一束白玫瑰
+
+怀孕-发现自己怀孕，怕W先生让自己堕胎，不再联系，在贫民区生下了孩子
+
+卖身-为了孩子更好的生活，开始卖身，其中一男子爱上了女主，女主为了等待W先生的再次相遇哪怕一个小时也好，拒绝了男子
+
+舞会上-碰到了W先生，再次发生关系，W先生未认出女主，W先生的仆人认出了女主，女主心态跌入谷底
+
+孩子-感染上了流感，女主坚持了三天不休息陪伴在孩子身边，希望孩子可以康复，最后女主小憩的几个小时孩子夭折
+
+自杀-写信给了W先生
+
 ## 联想到的
 
 你好，小姐。
